--- a/DiandianIOS/DiandianIOS/en.lproj/DAOrderCell.xib
+++ b/DiandianIOS/DiandianIOS/en.lproj/DAOrderCell.xib
@@ -44,7 +44,7 @@
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="PBZ-tP-LDE">
+                    <button opaque="NO" tag="21" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="PBZ-tP-LDE" customClass="DAOrderAddAmountBtn">
                         <rect key="frame" x="158" y="5" width="30" height="30"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
