--- a/DiandianIOS/DiandianIOS/DAOrderQueueViewController.xib
+++ b/DiandianIOS/DiandianIOS/DAOrderQueueViewController.xib
@@ -73,12 +73,12 @@
                     <color key="backgroundColor" red="0.88627457620000005" green="0.95686280729999995" blue="0.96862751250000001" alpha="1" colorSpace="deviceRGB"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zYm-Pb-ZNN">
-                    <rect key="frame" x="909" y="726" width="95" height="22"/>
+                    <rect key="frame" x="822" y="726" width="95" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="显示未上的菜"/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ily-WH-c5W">
-                    <rect key="frame" x="820" y="726" width="81" height="22"/>
+                    <rect key="frame" x="733" y="726" width="81" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="显示全部菜"/>
                 </button>
@@ -90,6 +90,16 @@
                     <rect key="frame" x="844" y="89" width="160" height="600"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NgV-TW-f6W">
+                    <rect key="frame" x="958" y="722" width="46" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="返回">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="onReturnTouched:" destination="-1" eventType="touchUpInside" id="fdG-rh-Tg9"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
